apps/attic/openobserve/extra/openobserve-k8s.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve
  labels:
    name: openobserve
spec:
  serviceName: openobserve
  replicas: 1
  selector:
    matchLabels:
      name: openobserve
      app: openobserve
  template:
    metadata:
      labels:
        name: openobserve
        app: openobserve
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      containers:
        - name: openobserve
          image: public.ecr.aws/zinclabs/openobserve:v0.7.2
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 512m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 50Mi
          ports:
            - containerPort: 5080
              name: http
          volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openobserve-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve
spec:
  clusterIP: None
  selector:
    app: openobserve
  ports:
  - name: http
    port: 5080
    targetPort: 5080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openobserve
spec:
  routes:
    - match: Host(`openobserve.s3rv.dev`)
      kind: Rule
      services:
        - name: openobserve
          port: http
